--- a/sentence-practice.html
+++ b/sentence-practice.html
@@ -388,6 +388,272 @@
                     pronunciation: '쟈-네',
                     korean: '그럼 안녕',
                     hint: '친구와 헤어질 때 하는 인사입니다.'
+                },
+                {
+                    japanese: 'すみません',
+                    romaji: 'sumimasen',
+                    pronunciation: '스미마센',
+                    korean: '실례합니다',
+                    hint: '사람을 부를 때나 사과할 때 사용합니다.'
+                },
+                {
+                    japanese: 'ただいま',
+                    romaji: 'tadaima',
+                    pronunciation: '타다이마',
+                    korean: '다녀왔습니다',
+                    hint: '집에 돌아왔을 때 하는 인사입니다.'
+                },
+                {
+                    japanese: 'おかえり',
+                    romaji: 'okaeri',
+                    pronunciation: '오카에리',
+                    korean: '어서 와',
+                    hint: '돌아온 사람을 맞이할 때 하는 인사입니다.'
+                },
+                {
+                    japanese: 'いってきます',
+                    romaji: 'ittekimasu',
+                    pronunciation: '잇테키마스',
+                    korean: '다녀오겠습니다',
+                    hint: '외출할 때 하는 인사입니다.'
+                },
+                {
+                    japanese: 'いってらっしゃい',
+                    romaji: 'itterasshai',
+                    pronunciation: '잇테랏샤이',
+                    korean: '다녀오세요',
+                    hint: '외출하는 사람에게 하는 인사입니다.'
+                },
+                {
+                    japanese: 'いただきます',
+                    romaji: 'itadakimasu',
+                    pronunciation: '이타다키마스',
+                    korean: '잘 먹겠습니다',
+                    hint: '식사를 시작하기 전에 하는 인사입니다.'
+                },
+                {
+                    japanese: 'ごちそうさま',
+                    romaji: 'gochisousama',
+                    pronunciation: '고치소-사마',
+                    korean: '잘 먹었습니다',
+                    hint: '식사를 마친 후 하는 인사입니다.'
+                },
+                {
+                    japanese: 'おめでとう',
+                    romaji: 'omedetou',
+                    pronunciation: '오메데또',
+                    korean: '축하해요',
+                    hint: '축하할 일이 있을 때 사용합니다.'
+                },
+                {
+                    japanese: 'がんばって',
+                    romaji: 'ganbatte',
+                    pronunciation: '간밧테',
+                    korean: '힘내',
+                    hint: '응원할 때 사용하는 표현입니다.'
+                },
+                {
+                    japanese: 'だいじょうぶ',
+                    romaji: 'daijoubu',
+                    pronunciation: '다이죠-부',
+                    korean: '괜찮아요',
+                    hint: '괜찮다는 의미를 표현합니다.'
+                },
+                {
+                    japanese: 'すてき',
+                    romaji: 'suteki',
+                    pronunciation: '스테키',
+                    korean: '멋져요',
+                    hint: '멋지거나 훌륭하다는 의미입니다.'
+                },
+                {
+                    japanese: 'かわいい',
+                    romaji: 'kawaii',
+                    pronunciation: '카와이이',
+                    korean: '귀여워',
+                    hint: '귀엽다는 의미를 표현합니다.'
+                },
+                {
+                    japanese: 'すごい',
+                    romaji: 'sugoi',
+                    pronunciation: '스고이',
+                    korean: '대단해',
+                    hint: '놀랍거나 대단하다는 의미입니다.'
+                },
+                {
+                    japanese: 'たのしい',
+                    romaji: 'tanoshii',
+                    pronunciation: '타노시이',
+                    korean: '즐거워',
+                    hint: '즐겁다는 감정을 표현합니다.'
+                },
+                {
+                    japanese: 'うれしい',
+                    romaji: 'ureshii',
+                    pronunciation: '우레시이',
+                    korean: '기뻐',
+                    hint: '기쁘다는 감정을 표현합니다.'
+                },
+                {
+                    japanese: 'さびしい',
+                    romaji: 'sabishii',
+                    pronunciation: '사비시이',
+                    korean: '외로워',
+                    hint: '외롭다는 감정을 표현합니다.'
+                },
+                {
+                    japanese: 'つかれた',
+                    romaji: 'tsukareta',
+                    pronunciation: '츠카레타',
+                    korean: '피곤해',
+                    hint: '피곤하다는 상태를 표현합니다.'
+                },
+                {
+                    japanese: 'ねむい',
+                    romaji: 'nemui',
+                    pronunciation: '네무이',
+                    korean: '졸려',
+                    hint: '졸리다는 상태를 표현합니다.'
+                },
+                {
+                    japanese: 'おいしい',
+                    romaji: 'oishii',
+                    pronunciation: '오이시이',
+                    korean: '맛있어',
+                    hint: '음식이 맛있을 때 사용합니다.'
+                },
+                {
+                    japanese: 'まずい',
+                    romaji: 'mazui',
+                    pronunciation: '마즈이',
+                    korean: '맛없어',
+                    hint: '음식이 맛없을 때 사용합니다.'
+                },
+                {
+                    japanese: 'あつい',
+                    romaji: 'atsui',
+                    pronunciation: '아츠이',
+                    korean: '더워/뜨거워',
+                    hint: '날씨가 덥거나 물건이 뜨거울 때 사용합니다.'
+                },
+                {
+                    japanese: 'さむい',
+                    romaji: 'samui',
+                    pronunciation: '사무이',
+                    korean: '추워',
+                    hint: '날씨가 추울 때 사용합니다.'
+                },
+                {
+                    japanese: 'たかい',
+                    romaji: 'takai',
+                    pronunciation: '타카이',
+                    korean: '비싸/높아',
+                    hint: '가격이 비싸거나 높이가 높을 때 사용합니다.'
+                },
+                {
+                    japanese: 'やすい',
+                    romaji: 'yasui',
+                    pronunciation: '야스이',
+                    korean: '싸',
+                    hint: '가격이 쌀 때 사용합니다.'
+                },
+                {
+                    japanese: 'おおきい',
+                    romaji: 'ookii',
+                    pronunciation: '오-키이',
+                    korean: '커',
+                    hint: '크기가 클 때 사용합니다.'
+                },
+                {
+                    japanese: 'ちいさい',
+                    romaji: 'chiisai',
+                    pronunciation: '치-사이',
+                    korean: '작아',
+                    hint: '크기가 작을 때 사용합니다.'
+                },
+                {
+                    japanese: 'あたらしい',
+                    romaji: 'atarashii',
+                    pronunciation: '아타라시이',
+                    korean: '새로워',
+                    hint: '새것일 때 사용합니다.'
+                },
+                {
+                    japanese: 'ふるい',
+                    romaji: 'furui',
+                    pronunciation: '후루이',
+                    korean: '오래됐어',
+                    hint: '오래된 것을 표현합니다.'
+                },
+                {
+                    japanese: 'いい',
+                    romaji: 'ii',
+                    pronunciation: '이-',
+                    korean: '좋아',
+                    hint: '좋다는 의미를 표현합니다.'
+                },
+                {
+                    japanese: 'わるい',
+                    romaji: 'warui',
+                    pronunciation: '와루이',
+                    korean: '나빠',
+                    hint: '나쁘다는 의미를 표현합니다.'
+                },
+                {
+                    japanese: 'むずかしい',
+                    romaji: 'muzukashii',
+                    pronunciation: '무즈카시이',
+                    korean: '어려워',
+                    hint: '어렵다는 의미를 표현합니다.'
+                },
+                {
+                    japanese: 'やさしい',
+                    romaji: 'yasashii',
+                    pronunciation: '야사시이',
+                    korean: '쉬워/친절해',
+                    hint: '쉽거나 친절하다는 의미입니다.'
+                },
+                {
+                    japanese: 'はやい',
+                    romaji: 'hayai',
+                    pronunciation: '하야이',
+                    korean: '빨라',
+                    hint: '속도가 빠르다는 의미입니다.'
+                },
+                {
+                    japanese: 'おそい',
+                    romaji: 'osoi',
+                    pronunciation: '오소이',
+                    korean: '느려',
+                    hint: '속도가 느리다는 의미입니다.'
+                },
+                {
+                    japanese: 'たくさん',
+                    romaji: 'takusan',
+                    pronunciation: '타쿠상',
+                    korean: '많이',
+                    hint: '많다는 의미를 표현합니다.'
+                },
+                {
+                    japanese: 'すこし',
+                    romaji: 'sukoshi',
+                    pronunciation: '스코시',
+                    korean: '조금',
+                    hint: '적은 양을 표현합니다.'
+                },
+                {
+                    japanese: 'とても',
+                    romaji: 'totemo',
+                    pronunciation: '토테모',
+                    korean: '매우',
+                    hint: '정도가 심함을 표현합니다.'
+                },
+                {
+                    japanese: 'ちょっと',
+                    romaji: 'chotto',
+                    pronunciation: '촛토',
+                    korean: '잠깐',
+                    hint: '짧은 시간이나 적은 양을 표현합니다.'
                 }
             ],
             basic: [
