--- a/hiragana-practice.html
+++ b/hiragana-practice.html
@@ -126,7 +126,7 @@
             top: 0;
             left: 0;
             pointer-events: none;
-            opacity: 0;
+            opacity: 0.3;
         }
 
         .controls {
@@ -1072,7 +1072,7 @@
         let currentCategory = 'a';
         let currentIndex = 0;
         let isDrawing = false;
-        let showGuide = false;
+        let showGuide = true;
 
         const canvas = document.getElementById('drawingCanvas');
         const guideCanvas = document.getElementById('guideCanvas');
