--- a/sentence-practice.html
+++ b/sentence-practice.html
@@ -167,7 +167,7 @@
             top: 0;
             left: 0;
             pointer-events: none;
-            opacity: 0;
+            opacity: 0.3;
         }
 
         .controls {
@@ -909,7 +909,7 @@
         let currentLevel = 'beginner';
         let currentIndex = 0;
         let isDrawing = false;
-        let showGuide = false;
+        let showGuide = true;
 
         const canvas = document.getElementById('drawingCanvas');
         const guideCanvas = document.getElementById('guideCanvas');
