--- a/hiragana-practice.html
+++ b/hiragana-practice.html
@@ -274,8 +274,10 @@
     <div class="container">
         <div class="header">
             <button class="back-button" onclick="goBack()">←</button>
-            <h1>히라가나</h1>
+            <h1>あ 히라가나</h1>
             <div class="header-buttons">
+                <button class="quiz-button" onclick="openQuiz()" title="퀴즈 모드">Q</button>
+                <button class="chart-button" onclick="openChart()" title="히라가나 표 보기">表</button>
                 <div class="font-dropdown">
                     <button class="font-button" onclick="toggleFontDropdown()" title="폰트 변경">Aa</button>
                     <div class="font-dropdown-content" id="fontDropdown">
@@ -285,8 +287,7 @@
                         <div class="font-option" onclick="setFont('M PLUS Rounded 1c')" style="font-family: 'M PLUS Rounded 1c'">M PLUS Rounded</div>
                     </div>
                 </div>
-                <button class="quiz-button" onclick="openQuiz()" title="퀴즈 모드">Q</button>
-                <button class="chart-button" onclick="openChart()" title="히라가나 표 보기">表</button>
+
             </div>
         </div>
         <div class="level-selector">
